# RAG_Practice

./: .gitignore  pyproject.toml  requirements.txt
data/text_files/: data_science.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: agentic_rag.ipynb  document.ipynb
