[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "faiss-cpu",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "sentence-transformers",
    "transformers",
]
